--- a/templates/hotgrid.hbs
+++ b/templates/hotgrid.hbs
@@ -1,35 +1,36 @@
-<div class="component-inner hotgrid-inner" role="region" aria-label="{{_globals._components._hotgrid.ariaRegion}}" {{#if _globals._components._hotgrid.ariaRegion}}tabindex="0"{{/if}}>
-    {{> component this}}
-    <div class="component-widget hotgrid-widget">
+<div class="component__inner hotgrid__inner" role="region" aria-label="{{_globals._components._hotgrid.ariaRegion}}" {{#if _globals._components._hotgrid.ariaRegion}}tabindex="0"{{/if}}>
+  {{> component this}}
+  <div class="component__widget hotgrid__widget">
 
-        <div class="hotgrid-grid">
-            <div class="hotgrid-grid-inner clearfix">
+    <div class="hotgrid__grid">
+      <div class="hotgrid__grid-inner clearfix">
 
-                {{#each _items}}
-                <div class="hotgrid-grid-item">
-                    <button class="base hotgrid-item-image hotgrid-item-states-{{#if _graphic.hasImageStates}}image{{else}}css{{/if}} {{#if _isVisited}}visited{{/if}} {{#if ../_hasRoundedImages}}border-radius{{/if}}" aria-label="{{#if _graphic.title}}{{_graphic.title}}.{{/if}}{{#if _graphic.alt}} {{_graphic.alt}}.{{/if}}{{#if _isVisited}} {{../_globals._accessibility._ariaLabels.visited}}.{{/if}}">
-                        <img src="{{_graphic.src}}"/>
+        {{#each _items}}
+        <div class="hotgrid__grid-item">
 
-                        {{#if _graphic.hasImageStates}}
-                        <img src="{{_graphic.srcHover}}" class="hotgrid-item-image-hover"/>
-                        <img src="{{_graphic.srcVisited}}" class="hotgrid-item-image-visited"/>
-                        {{/if}}
+          <button class="base hotgrid__grid-item-image hotgrid__grid-item-states-{{#if _graphic.hasImageStates}}image{{else}}css{{/if}} {{#if _isVisited}}visited{{/if}} {{#if ../_hasRoundedImages}}border-radius{{/if}}" aria-label="{{#if _graphic.title}}{{_graphic.title}}.{{/if}}{{#if _graphic.alt}} {{_graphic.alt}}.{{/if}}{{#if _isVisited}} {{../_globals._accessibility._ariaLabels.visited}}.{{/if}}">
+            <img src="{{_graphic.src}}"/>
 
-                    </button>
+            {{#if _graphic.hasImageStates}}
+            <img src="{{_graphic.srcHover}}" class="hotgrid__grid-item-image-hover"/>
+            <img src="{{_graphic.srcVisited}}" class="hotgrid__grid-item-image-visited"/>
+            {{/if}}
 
-                    {{#if _graphic.title}}
-                    <div class="hotgrid-item-title">
-                    	<div class="hotgrid-item-title-inner">
-                    		{{{_graphic.title}}}
-                    	</div>
-                    </div>
-                    {{/if}}
-
-                </div>
-                {{/each}}
-
+            {{#if _graphic.title}}
+            <div class="hotgrid__grid-item-title">
+              <div class="hotgrid__grid-item-title-inner">
+                {{{_graphic.title}}}
+              </div>
             </div>
-        </div>
+            {{/if}}
 
+          </button>
+
+        </div>
+        {{/each}}
+
+      </div>
     </div>
+
+  </div>
 </div>
