--- a/less/hotgrid.less
+++ b/less/hotgrid.less
@@ -1,6 +1,6 @@
 .hotgrid {
   //---------------------
-  //Item layout
+  //Items layout
   //---------------------
   &__widget-inner {
     display: flex;
@@ -15,16 +15,41 @@
 
   &__item-btn {
     border: 3px solid transparent;
+
+    &.is-round {
+      border-radius: 50%;
+    }
   }
 
   //---------------------
   //Item states
   //---------------------
-  &__item-btn-states-css {
+  &__item-btn.has-css-states {
+    position: relative;
+
     .no-touch &:hover {
-      border: 3px solid black;
+      border-color: black;
+    }
+
+    &.is-visited {
+      &:before {
+        content: "";
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+        background-color: fade(black, 50%);
+      }
+    }
+
+    &.is-round {
+      &:before {
+        border-radius: 50%;
+      }
     }
   }
+  
   
   //----------------------
   //Popup (notify) layout
