--- a/templates/hotgrid.hbs
+++ b/templates/hotgrid.hbs
@@ -7,7 +7,8 @@
         {{#each _items}}
         <div class="hotgrid__item">
 
-          <button class="btn hotgrid__item-inner hotgrid__item-btn-states-{{#if _graphic.hasImageStates}}has-image-states{{else}}has-css-states{{/if}} {{#if _isVisited}}visited{{/if}} {{#if ../_hasRoundedImages}}border-radius{{/if}} js-hotgrid-item-click" aria-label="{{#if _graphic.title}}{{_graphic.title}}.{{/if}}{{#if _graphic.alt}} {{_graphic.alt}}.{{/if}}{{#if _isVisited}} {{../_globals._accessibility._ariaLabels.visited}}.{{/if}}">
+          <button class="btn hotgrid__item-btn {{#if _graphic.hasImageStates}}has-image-states{{else}}has-css-states{{/if}} {{#if ../_hasRoundImages}}is-round{{/if}} js-hotgrid-item-click" aria-label="{{#if _graphic.title}}{{_graphic.title}}.{{/if}}{{#if _graphic.alt}} {{_graphic.alt}}.{{/if}}{{#if _isVisited}} {{../_globals._accessibility._ariaLabels.visited}}.{{/if}}">
+          
             <div class="hotgrid__item-image">
               <img src="{{_graphic.src}}"/>
 
@@ -17,15 +18,15 @@
               {{/if}}
             </div>
 
-            {{#if _graphic.title}}
-            <div class="hotgrid__item-title">
-              <div class="hotgrid__item-title-inner">
-                {{{_graphic.title}}}
-              </div>
-            </div>
-            {{/if}}
-
           </button>
+
+          {{#if _graphic.title}}
+          <div class="hotgrid__item-title">
+            <div class="hotgrid__item-title-inner">
+              {{{_graphic.title}}}
+            </div>
+          </div>
+          {{/if}}
 
         </div>
         {{/each}}
