--- a/less/hotgrid.less
+++ b/less/hotgrid.less
@@ -18,6 +18,7 @@
 
     &.is-round {
       border-radius: 50%;
+      overflow: hidden;
     }
   }
 
@@ -39,7 +40,7 @@
         right: 0;
         width: 100%;
         height: 100%;
-        background-color: fade(black, 50%);
+        background-color: fade(black, 30%);
       }
     }
 
